--- a/sass/components/info.scss
+++ b/sass/components/info.scss
@@ -22,11 +22,10 @@
     }
     &__display {  
         z-index: -1;
-        text-align: right;
         margin-top: rem(-188px);
         position: absolute;
-        top:  0;
-        left: rem(90px);
+        top:   0;
+        right: 0;
         @include mq(medium) {
             left: 0;
             margin-top: rem(-105px);
